<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home_title" />
    <item
        android:id="@+id/nav_profile_browse"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_title"/>
    <item
        android:id="@+id/nav_events_browse"
        android:icon="@drawable/event_browse_icon"
        android:title="@string/file_title"/>
    <item
        android:id="@+id/nav_facility_browse"
        android:icon="@drawable/facility_icon"
        android:title="@string/facility_title"/>
    <item
        android:id="@+id/nav_image_browse"
        android:icon="@drawable/image_icon"
        android:title="@string/image_title"/>
</menu>