...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_map" />

    <!-- Admin Delete Event Button-->
    <Button
        android:id="@+id/button_delete_event"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/delete_event_button"
        android:textColor="@color/white"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_dates_section" />

    <!-- Admin Delete QR Code Data Button-->
    <Button
        android:id="@+id/button_delete_event_qr_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/delete_event_qr_data_button"
        android:textColor="@color/white"
...
