...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_profile_phone" />

        <!-- Admin Delete Profile Button -->
        <Button
            android:id="@+id/button_delete_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/lighter_purple"
            android:text="@string/delete_profile_button"
            android:textColor="@color/white"
...
