...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_text" />


        <!-- Admin Button -->
        <Button
            android:id="@+id/admin_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lighter_purple"
            android:text="@string/admin_string"
...
